@@ -1,6 +1,6 @@
 /* -*-C-*- */
 
-/* $Id: lex.l,v 1.83 2007-03-04 16:01:31 nicm Exp $ */
+/* $Id: lex.l,v 1.84 2007-03-20 18:17:46 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -130,6 +130,7 @@ file-umask return (TOKFILEUMASK);
 flock return (LCKFLOCK);
 folder return (TOKFOLDER);
 from-headers return (TOKFROMHEADERS);
+from-netrc return (TOKFROMNETRC);
 group return (TOKGROUP);
 groups return (TOKGROUPS);
 header return (TOKHEADER);
